--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,12 @@
  * user guide available at https://docs.gradle.org/4.8.1/userguide/java_library_plugin.html
  */
 
-plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java-library'
-}
+apply plugin: 'java'
+
+sourceCompatibility = '11'
+targetCompatibility = '11'
 
 dependencies {
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:23.0'
 
@@ -24,7 +21,15 @@ dependencies {
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
+    // Use jcenter for resolving your endencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+}
+
+[compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
+
+task runJava(type: JavaExec) {
+    main = 'Main'
+ 
+    classpath = sourceSets.main.runtimeClasspath
 }
