--- a/.classpath
+++ b/.classpath
@@ -12,6 +12,12 @@
 			<attribute name="gradle_used_by_scope" value="test"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" output="bin/generated" path="build/classes">
+		<attributes>
+			<attribute name="gradle_scope" value="generated"/>
+			<attribute name="gradle_used_by_scope" value="generated"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="output" path="bin/default"/>
