--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
 build
 bin
-gradle
+/.gradle/
+
+# Log file
+*.log
+*.lock
+*.bin
+
+
+### Gradle Patch ###
+/build/
+
+
+/gradle/
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
