--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,28 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+compileJava {
+    options.compilerArgs << "-s"
+    options.compilerArgs << "$projectDir/build/classes"
+
+    doFirst {
+        file(new File(projectDir, "/build/classes")).mkdirs()
+    }
+}
+
+clean.doLast {
+    // clean-up directory when necessary
+    file(new File(projectDir, "/build")).deleteDir()
+}
+
+sourceSets {
+    generated {
+        java {
+            srcDir "$projectDir/build/classes"
+        }
+    }
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your endencies.
