--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 
 sourceCompatibility = '11'
 targetCompatibility = '11'
@@ -17,6 +18,11 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+
+    compile "ch.qos.logback:logback-classic:1.2.3"
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 }
 
 compileJava {
@@ -46,6 +52,7 @@ repositories {
     // Use jcenter for resolving your endencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 [compileJava, compileTestJava, javadoc]*.options*.encoding = 'UTF-8'
